; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_simple_oom_6.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_simple_oom_6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LSM_OK = common dso_local global i32 0, align 4
@LSMTEST6_TESTDB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"log\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @simple_oom_6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @simple_oom_6(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = call i32* (...) @getDatasource()
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* @LSM_OK, align 4
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* @LSMTEST6_TESTDB, align 4
  %9 = call i32 @testRestoreDb(i32 %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @LSMTEST6_TESTDB, align 4
  %12 = call i32 @testOomOpen(i32* %10, i32 %11, i32** %5, i32* %4)
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @testOomWriteData(i32* %13, i32* %14, i32* %15, i32 5000, i32* %4)
  %17 = load i32*, i32** %2, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @testOomWriteData(i32* %17, i32* %18, i32* %19, i32 5001, i32* %4)
  %21 = load i32*, i32** %2, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @testOomWriteData(i32* %21, i32* %22, i32* %23, i32 5002, i32* %4)
  %25 = load i32*, i32** %2, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @testOomFetchData(i32* %25, i32* %26, i32* %27, i32 5001, i32* %4)
  %29 = load i32*, i32** %2, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @testOomFetchData(i32* %29, i32* %30, i32* %31, i32 1234, i32* %4)
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @lsm_close(i32* %33)
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @testDatasourceFree(i32* %35)
  ret void
}

declare dso_local i32* @getDatasource(...) #1

declare dso_local i32 @testRestoreDb(i32, i8*) #1

declare dso_local i32 @testOomOpen(i32*, i32, i32**, i32*) #1

declare dso_local i32 @testOomWriteData(i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @testOomFetchData(i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @lsm_close(i32*) #1

declare dso_local i32 @testDatasourceFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
